<resources>
    <string name="app_name">RoyalSoft</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">UserName</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="title_activity_maps">Map</string>
    <string name="ss">موقعنا</string>
    <string name="title_activity_navigation__home">navigation_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Maintenance">Maintenance</string>
    <string name="Update">Update</string>
    <string name="default_notification_channel_id">Notification</string>
    <string name="fcm_message">Notification</string>
    <string name="txtbranch">Branch</string>
    <string name="txtInventory">Inventory</string>
    <string name="txtSupplier">Supplier</string>
    <string name="txtDate">Date</string>
    <string name="txtrecipient">recipient</string>
    <string name="txtNote">Note</string>
    <string name="txtSave">Save</string>
    <string name="txtNewIncomeVoucher">New Income Voucher</string>
    <string name="txtSelect">-- Select</string>
    <string name="Entered_items">Items</string>
    <string name="SaveOrder">Save Order</string>
    <string name="editBarcode">Barcode</string>
    <string name="Cancelorder">Cancel Order</string>
    <string name="SureNewIncomeVoucher">are you sure ?</string>
    <string name="SureNewIncomeVoucher2">The existing items will be deleted and a new bond will be created</string>
    <string name="SureNewIncomeVoucher3">Yes, I want to renew the bond</string>
    <string name="txtPurchasePrice">Purchase Price</string>
    <string name="new_purchase_order">New Purchase Order</string>
    <string name="new_InvoiceSeles">Invoice Seles</string>
    <string name="Itemquantity">Item Quantity</string>
    <string name="print">Print</string>
    <string name="number_0">0</string>
    <string name="number_50">50</string>
    <string name="number_100">100</string>
    <string name="brightness">Brightness</string>
    <string name="device_storage">Device storage</string>
    <string name="close_printer">Close</string>
    <string name="open_printer">Connected</string>
    <string name="open_from_device_storage">Open from device storage</string>
    <string name="paired_devices">Paired devices</string>
    <string name="lsitImageSales">Item</string>
    <string name="lsitPriceSales">Price</string>
    <string name="radioCash">Cash</string>
    <string name="radioAccountsreceivable">AP</string>
    <string name="txtCustomer">Customers</string>
    <string name="txtDailyupdate">Daily Update</string>
    <string name="txtBranchdataupdate">Branch Data Update</string>
    <string name="txtUpdatingwarehousedata">Updating Inventory Data</string>
    <string name="txtUpdate_material_data">Update Items Data</string>
    <string name="txtUpdate_supplier_data">Update Supplier Data</string>
    <string name="txtUpdate_customer_data">Update Customer Data</string>
    <string name="txtUpdate_employee_data">Update Employee Data</string>
    <string name="txtGroup_data_update">Gategory Data Update</string>
    <string name="txt_Data_migrated_after_each_save">Data is migrated after each save (Online))</string>
    <string name="txtSaveSetting">Save Settings Device</string>
    <string name="txtData_migration">Data Migration</string>
    <string name="txtRefresh_data">Refresh Data</string>
    <string name="txtSqllitePoup">The data has been saved inside the device, please migrate the data upon completion of the process</string>
    <string name="txtInternetError">There was a failure in the connection process to the server</string>
    <string name="txtOk">OK</string>
    <string name="txtCorrectoperation">Correct Operation</string>
    <string name="NewOrderSales">It will cancel the current bond !</string>
    <string name="txtWrongoperation">Wrong operation</string>
    <string name="txtFaild">The migration process failed, because there was no connection on the server</string>
    <string name="txtmigratedsystem">Successfully migrated data to the system, number of posted documents</string>
    <string name="txtBondInventory">Bond Inventory</string>
    <string name="txtBarcode">Barcode</string>
    <string name="txtcategoery">Categoery</string>
    <string name="txtItemName">Item Name</string>
    <string name="txtSalesPrice">Sales Price</string>
    <string name="txtNewItem">Definition Item</string>
    <string name="txtNew">New</string>
    <string name="noError">Re-raise the bills</string>
    <string name="btn_Tables">Tables</string>
    <string name="lb_IsUsed">Sorry, this table is being used by another captain</string>
    <string name="txtIsHasAdditions">Sorry, this article has no additions</string>
    <string name="txtIsHasOptions">Sorry, this article has no options</string>
    <string name="txtChooseAdditions">Choose Additions</string>
    <string name="txtNote22">Enter your notes here</string>
    <string name="txt_Access_delete">Sorry, you do not have permission to delete</string>
    <string name="current_balance">Current Balance</string>
    <string name="T_payment">Payment</string>
    <string name="txtSalesMan">SalesMan</string>
    <string name="txtBox">Box</string>
    <string name="Type_invoice">Type Invoice</string>
    <string name="txtTaxbill">Tax Invoice</string>
    <string name="Anon_taxinvoice">non-tax invoice</string>
    <string name="exempt_Invoice">exempt Invoice</string>
    <string name="Zero_Invoice">Zero Invoice</string>
    <string name="txtBased_quantity">Based</string>
    <string name="number_baskets">N.Baskets</string>
    <string name="Type_panier">Type</string>
    <string name="Empty_quantity">Empty</string>
    <string name="EnterQty">Please enter the quantity</string>
    <string name="EnterQtyExisting">Please Enter an Existing Quantity</string>
    <string name="EnterNumberBaskets">Please enter the number of baskets</string>
    <string name="Choose_from_the_list">Choose from the list</string>
    <string name="take_picture">take a picture</string>
    <string name="IncomingCashVouchers">Incoming Cash Vouchers</string>
    <string name="Incoming_Cheques_Vouchers">Incoming Cheques Vouchers</string>
    <string name="txtTaxSales">Sales Tax</string>
    <string name="Please_enter_amount">Please Enter The Amount</string>
    <string name="Please_Select_Customer">Please Select Customer</string>
    <string name="Please_Select_Cash">Please Select Cash</string>
    <string name="txtSuccessfully_Print">The invoice has been saved successfully. Do you want to print?</string>
    <string name="txtSettingPrinter">Setting Printer</string>
    <string name="Predefined_devices">Predefined Devices</string>
    <string name="New_connected_devices">New connected devices</string>
    <string name="Saved_successfully">Saved Successfully</string>
    <string name="device_name">Device Name</string>
    <string name="Device_type">Device Type</string>
    <string name="Please_identify">Sorry, there is no predefined printer. Please identify the printer, then try again</string>
    <string name="Print_Previous_Invoice">Print Previous Invoice</string>
    <string name="request_cancel">A request to cancel the tour</string>
    <string name="replacement_request">Round replacement request</string>
    <string name="Request_retracted">Request for cancellation to be retracted</string>
    <string name="The_continue">The round will be canceled. Do you want to continue?</string>
    <string name="txt_Options">Options</string>
    <string name="txtcashVan">Cash Van</string>
    <string name="txtRestaurants">Restaurants</string>
    <string name="Warning">Warning</string>
    <string name="txtlimitCustomer">The customer has exceeded the liability limit, do you want to send a notice to the management?</string>
    <string name="Please_approval">Please wait, awaiting management approval</string>
    <string name="Retreat">Retreat</string>
    <string name="connection">connection</string>
    <string name="txtIncomeVoucher">Income Voucher</string>
    <string name="Sales">Sales</string>
    <string name="Returns">Returns</string>
    <string name="Receipt_reports">Receipt Reports</string>
    <string name="Report_Working_hours">Report Working Hours</string>
    <string name="total">Total</string>
    <string name="txtfeedback">Feed Back</string>
    <string name="txtName">Name</string>
    <string name="txtNo">No</string>
    <string name="txt_food">Satisfaction with Food Quality</string>
    <string name="txtyes">yes</string>
    <string name="txt_Service">Satisfaction with the Speed of Service</string>
    <string name="txt_clean">Satisfaction with the Cleanliness of the Place</string>
    <string name="txt_farahWay">Would you recommend Farah Way to family and friends</string>
    <string name="txt_feedback_sent">Thank you, your feedback has been sent</string>
    <string name="yesconn">تم الإتصال في الطابعة بنجاح ، يرجى الضغط على نعم للطباعة</string>
    <string name="conn_closed">Con Close</string>
    <string name="scanning">扫描设备中...</string>
    <string name="select_device">请选择要连接的设备</string>
    <string name="none_paired">没有匹配的设备</string>
    <string name="has_paired">has paired</string>
    <string name="not_paired">未配对</string>
    <string name="rePaire_connect">重新配对并连接</string>
    <string name="unpair">unpair</string>
    <string name="paire_connect">配对并连接</string>
    <string name="select_options">选择操作</string>
    <string name="none_found">没有找到设备</string>
    <string name="no_bounded_device">未找到名称以 %s 开头的设备</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描新设备</string>
    <string name="disconnect">disconnect</string>
    <string name="txtProcessingorder">Processing orders</string>
    <string name="txtQulity">Satisfaction with the quality of service</string>
    <string name="txtterms">terms PDA</string>
    <string name="connect_paired">Connect Paired</string>
    <string name="conn_failed">conn failed</string>
    <string name="conn_no">conn no</string>
    <string name="txtOfferPrice">Offer Price</string>
</resources>