<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFeedBack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtName"
            android:layout_weight="10"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtAname"
            android:textAlignment="center"
            android:layout_weight="90"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Telephone"
            android:layout_weight="10"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="number"
            android:id="@+id/txtPhone"
            android:layout_weight="90"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtQulity"
            android:layout_weight="30"
            android:textSize="20dp"
            android:textColor="#020000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:gravity="center"
            android:orientation="horizontal">
            <RatingBar
                android:layout_width="250dp"
                android:numStars="5"
                android:layout_height="wrap_content"
                android:id="@+id/rtstar1"
                />

    </LinearLayout>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_Service"
            android:layout_weight="30"
            android:textSize="20dp"
            android:textColor="#020000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:gravity="center"
            android:orientation="horizontal">
            <RatingBar
                android:layout_width="250dp"
                android:numStars="5"
                android:layout_height="wrap_content"
                android:id="@+id/rtstar2"
                />

        </LinearLayout>


    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_clean"
            android:layout_weight="30"
            android:textSize="20dp"
            android:textColor="#020000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:gravity="center"
            android:orientation="horizontal">
            <RatingBar
                android:layout_width="250dp"
                android:numStars="5"
                android:layout_height="wrap_content"
                android:id="@+id/rtstar3"
                />

        </LinearLayout>


    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:visibility="gone"
         android:weightSum="100">

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/txt_farahWay"
             android:layout_weight="30"
             android:textSize="20dp"
             android:textColor="#020000"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:gravity="center"
             />

         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="70"
             android:gravity="center"
             android:orientation="horizontal">
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="horizontal">
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="yes"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:textColor="#000"
                     android:checked="true"
                     android:id="@+id/rdyes"
                     />
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="NO"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:id="@+id/rdno"
                     />
             </RadioGroup>

         </LinearLayout>


     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="5dp"
         android:visibility="gone"
         android:weightSum="100">

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/txtNote"
             android:layout_weight="10"
             android:textSize="22dp"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:gravity="center"
             />
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:id="@+id/txtNott"
             android:layout_weight="90"/>
     </LinearLayout> -->
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/txtSave"
         android:id="@+id/btnsavefeed"
         android:background="@drawable/hover_bt_sms"
         android:layout_margin="20dp"
         android:textColor="#fff"/>
 </LinearLayout>